# sphinxlinter

./: .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  sphinxlinter.py
.github/workflows/: cd.yml  ci.yml
tests/: test_get_func_return_types.py  test_has_return_or_yield.py  test_is_not_implemented.py  test_linter.py  test_sphinxlinter.py  test_violations.py  tests.py
